@@ -1,5 +1,6 @@
 2.60    * add missing methods newFromWBMP, newFromXbm,
           RT #68784
+        * cleanup Makefile.PL #20
 2.59    * error on failing libgd calls
         * fix colorClosestAlpha, colorAllocateAlpha
         * add missing documentation
